integration/fixtures/k8s-session-persistence/gateway-sticky-cookie-attrs/gateway-backend-whoami-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-cookie-attrs
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami-cookie-attrs
  template:
    metadata:
      labels:
        app: whoami-cookie-attrs
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
