integration/fixtures/k8s-session-persistence/gateway-sticky-cookie-attrs/gateway-backend-whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-cookie-attrs
  namespace: default
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami-cookie-attrs
