integration/fixtures/k8s-session-persistence/gateway-sticky-cookie-attrs/gateway-httproute-cookie-attrs.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-cookie-attrs
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-cookie-attrs.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-cookie-attrs
          port: 80
      sessionPersistence:
        sessionName: gw-cookie-attrs
        type: Cookie
        absoluteTimeout: 1h
        cookieConfig:
          lifetimeType: Permanent
